CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(PRADA)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/bin/")
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/lib/")
INCLUDE_DIRECTORIES(
    src
)

set(CMAKE_CXX_FLAGS "-O3 -Wall -DMT_NOCHECK")

ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(test)
